Added missing label for the search box
Found problem through wave.webaim.org

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="container">
       <!-- Switch to  12 vs 24 hr clock -->
       <div class="row pl-3 pb-3"> <!-- row for numHrs switch -->
-        <div class="col col-md-6 form-control form-check-inline bg-light border border-dark rounded p-2 m3">
+        <div class="col col-md-7 form-control form-check-inline bg-light border border-dark rounded p-2 m3">
           <!-- Description of checkbox for screen readers -->
           <div id="hrsDesc" class="sr-only">Switch to toggle between 24 and 12 hour clocks</div> 
           <div class="mr-2 font-weight-bold mySwitches d-none d-md-inline">24 Hour Clocks</div>
@@ -194,7 +194,7 @@
               <div class="card-body"> <!-- card body -->
                 
                 <div id="parent" class="form-group"> <!-- form -->
-                  <label for="myAutocomplete" class="sr-only" >Search for City</label>
+                  <label for="{{searchBoxID}}" class="sr-only" >Search for City</label>
                   <div id="{{searchBoxDivID}}"></div>
                 </div> <!-- close form -->
                 
