Button to copy times working
Need to change the searched city too though.

--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
             </div>
           </div>
         </div> <!-- close container for range sliders -->
+      
+        <!-- Button to copy the times to a sendable URL -->
+        <div class="container">
+          <div class="row">
+            <div class="col pb-3 pl-3">
+              <button class = "btn btn-danger" id="copyBtn">Copy URL to send times</button>
+            </div>
+          </div>
+        </div>
+        <!-- Close container for Button -->
 
       </div> <!-- close hold switches container -->
 
