changed screen reader output to say "you are on a clock"
I don't know why the label for ID says {{searchBoxID}} and yet it shows on ALL clocks...

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <div class="card-body"> <!-- card body -->
                 
                 <div id="parent" class="form-group"> <!-- form -->
-                  <label for="{{searchBoxID}}" class="sr-only" >Search for City</label>
+                  <label for="{{searchBoxID}}" class="sr-only" >You are on a clock</label>
                   <div id="{{searchBoxDivID}}"></div>
                 </div> <!-- close form -->
                 
