two working search clocks
not counting other problems I haven't solved of course

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
       </div> <!-- close hold switches container -->
 
-        <!-- One placeholder for all clocks using clockCards template -->
+        <!-- One placeholder for all time shifting clocks using clockCards template -->
         <div class="container">
           <div class="row" id="shiftingClocksPlaceholder"></div>
         </div>
