--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       }
       
     </style>
+  </head>
   
     <title>Podfeet Time Shifter Clock</title>
   </head>
@@ -103,13 +104,13 @@
         <div class="row">
           <p class="lead">
             <div class="col-2 mr-2"><img width="75" alt="Programming by Stealth Logo" src="https://pbs.bartificer.net/assets/logo.png"></div>
-            <h1 class="col h3 d-md-inline ">Time Shifter Clock</h1>
+            <h1 class="col h3 d-md-inline ">Time Shifter Clock&nbsp;&nbsp;&nbsp;<i class="fas fa-book-reader" data-toggle='popover' data-trigger="hover" data-title = "The purpose of this clock is to take the guess work out of telling someone in another time zone what time you want to meet. " data-content="Search for your own city and your partner's city and drag the shifter until you see the time you like and then hit the copy URL button. Send the URL to your partner and they'll see the exact times you've chosen. In turn they can offer an alternaet time by using their own time shifter."></i></h1>
           </p>
         </div>
         <div class="row">
           <div class="col-2 mr-2"></div>
           <div class="col">
-            <p>Find out what time it WILL be in another timezone</p>
+            <p>Find out what time it WILL be in another timezone&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-question-circle" data-toggle='popover' data-trigger="hover" title= "What is time shifting?" data-content="Lots of services will tell you what time it IS in another timezone, but this tool allows you to figure out what time it WILL be in two timezones."></i></p>
           </div>
         </div>
         
@@ -155,7 +156,7 @@
               <form>
                 <div class="form-group">
                   <div >
-                    <label for="changeHrs">Drag to Shift Time (hrs)</label>
+                    <label for="changeHrs">Drag to Shift Time (hrs)&nbsp;&nbsp;&nbsp;&nbsp;</label><i class="fas fa-info-circle" data-toggle='popover' data-trigger="hover" title= "Drag slider to shift time" data-content="Note that clocks will be reset to nearest hour before current time, and shift forward from there."></i>
                     <input type="range" class="slider form-control-input" min="0" max="23.5" step=".5" value="0" data-show-value="true" id="changeHrs" data-thumbwidth="20">
                     <p class="slider_label" id="hrsChosen"></p>
                   </div>
@@ -170,6 +171,7 @@
           <div class="row">
             <div class="col pb-3 pl-3">
               <button class = "btn btn-danger" id="copyBtn">Copy URL to send times</button>
+              <div id="dummy"></div>
             </div>
           </div>
         </div>
@@ -236,9 +238,21 @@
     <!-- load moment-timezone -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.28/moment-timezone-with-data-1970-2030.min.js" integrity="sha256-ob9GYTF6HJFUyVtlWivU47nga6eeRR3Lti9VfUeFhBI=" crossorigin="anonymous"></script>
     <!-- Include is.js from CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js" integrity="sha256-lnJeulOa3e5IO2EzHr8jKJ3CbT80MBwkS5a+n2ooIr4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js" integrity="sha256-lnJeulOa3e5IO2EzHr8jKJ3CbT80MBwkS5a+n2ooIr4=" crossorigin="anonymous"></script>
     <!-- Load the local JS Code AFTER the other libraries -->
     <script type="text/javascript" src="./script.js"></script>
+    <!-- Include Font Awesome -->
+    <script src="https://kit.fontawesome.com/017e626a00.js" crossorigin="anonymous"></script>
 
+    <!-- This Page's Event handlers -->
+    <script type="text/javascript">
+      // document ready handler
+      $(function(){
+        // initialise all popovers
+        $('[data-toggle="popover"]').popover({});
+        // set font-awesome popovers to trigger on hover
+        $("i.fa").popover({'trigger':'hover'});
+      });
+    </script>
   </body>
 </html>
