--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <div class="card-body"> <!-- card body -->
                 
                 <div id="parent" class="form-group" role="combobox"> <!-- form -->
-                  <label for="{{searchBoxID}}" class="sr-only" >Type at least 3 characters of the city you desire and then hit tab to see if there are any matches to your search. The matches will be buttons you can select and then you can tab to the next part of the page.</label>
+                  <label for="{{searchBoxID}}" class="sr-only" >Type 3 characters and look for dropdown</label>
                   <div id="{{searchBoxDivID}}" aria-expanded="false"></div>
                 </div> <!-- close form -->
                 
@@ -233,10 +233,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js" integrity="sha256-srhz/t0GOrmVGZryG24MVDyFDYZpvUH2+dnJ8FbpGi0=" crossorigin="anonymous"></script>
 
     <!-- Bootstrap 4 Autocomplete  Plugin-->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script>
 
     <!-- Local Bootstrap 4 Autocomplete Plugin -->
-    <script src="./bootstrap-4-autocomplete.js" crossorigin="anonymous"></script>
+    <!-- <script src="./bootstrap-4-autocomplete.js" crossorigin="anonymous"></script> -->
 
     <!-- load moment.js with locales -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js" integrity="sha256-AdQN98MVZs44Eq2yTwtoKufhnU+uZ7v2kXnD5vqzZVo=" crossorigin="anonymous"></script>
