--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
               </div>
               <!-- row for explanation button -->
-              <div class="row mt-3"> <!-- row for explanation button -->
+              <div class="row"> <!-- row for explanation button -->
                 <p>
                   <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#explanationText" aria-expanded="false" aria-controls="explanationText">
                     Push to Learn How This Works
