--- a/index.html
+++ b/index.html
@@ -57,23 +57,12 @@
       }
 
       /* Searchboxes */
-      .mySearchboxes {
+      .mySearchboxes::placeholder {
         /* font-size: 1.25rem; */
         font-weight: bold;
         color: #007bff;  /* same color as Bootstrap "primary" */
         vertical-align: text-top;
       }
-      
-      /* Pulse time in non-shifting clocks */
-      /* .pulse {
-        animation: blinker 2s linear infinite;
-      }
-
-      @keyframes blinker {
-        50% {
-          opacity: .2;
-        }
-      } */
 
       /* Stop inline check box from adding a margin-right */
       .form-check-inline {
@@ -135,7 +124,7 @@
                 <!-- Placeholder for current local time -->
                 <div class="container">
                   <div class="row">
-                    <div class="col col-md-5">
+                    <div class="col col-md-6">
                       <div class="row" id="staticClocksPlaceholder"></div>
                     </div>
                   </div>
@@ -213,7 +202,7 @@
                   </div>
                   <!-- <i class="fas fa-info-circle" data-toggle='popover' data-trigger="hover" title= "Drag slider to shift time" data-content="Note that clocks will round down to nearest hour before current time first, and shift forward from there.">
                   </i> -->
-                  <input type="range" class="slider form-control-input" min="0" max="23.5" step=".5" value="0" data-show-value="true" id="changeHrs" data-thumbwidth="20">
+                  <input type="range" class="slider form-control-input" min="0" max="167.5" step=".5" value="0" data-show-value="true" id="changeHrs" data-thumbwidth="20">
                   <p class="slider_label" id="hrsChosen"></p>
                 </div>
               </div>
@@ -250,7 +239,7 @@
           <div id="{{searchBoxDivID}}" aria-expanded="false"></div>
         </div> <!-- close form -->
         
-        <div style="color: blue" class="rounded col" id="{{timeDescriptionID}}">{{timeDescription}}
+        <div style="color: red" class="rounded col" id="{{timeDescriptionID}}">{{timeDescription}}
         </div>
         <div class="ml-5 mb-3 text-dark {{pulseMe}}" id="{{timeID}}"></div><!-- placeholder div for the actual time -->
       </div> <!-- close div for card -->     
@@ -266,10 +255,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js" integrity="sha256-srhz/t0GOrmVGZryG24MVDyFDYZpvUH2+dnJ8FbpGi0=" crossorigin="anonymous"></script>
 
     <!-- Bootstrap 4 Autocomplete  Plugin-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script> -->
 
     <!-- Local Bootstrap 4 Autocomplete Plugin -->
-    <!-- <script src="./bootstrap-4-autocomplete.js" crossorigin="anonymous"></script> -->
+    <script src="./bootstrap-4-autocomplete.js" crossorigin="anonymous"></script>
 
     <!-- load moment.js with locales -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js" integrity="sha256-AdQN98MVZs44Eq2yTwtoKufhnU+uZ7v2kXnD5vqzZVo=" crossorigin="anonymous"></script>
