changed color of default text (too loud)

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       /* Searchboxes */
       .mySearchboxes::placeholder {
         /* font-size: 1.25rem; */
-        font-weight: bold;
-        color: #007bff;  /* same color as Bootstrap "primary" */
+        /* font-weight: bold; */
+        color: light-grey;  /* same color as Bootstrap "primary" */
         vertical-align: text-top;
       }
 
