Add css to hide the form group with prepended icon from the static (non-shifting) clocks
it was showing in the header local time. More elegant would be to change the class but hiding it works for me!

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       .form-check-inline {
         margin-right: 0;
       }
+      /* Hide form-group from static clocks placeholder */
+      #staticClocksPlaceholder .form-group {
+        display: none;
+      }
 
     </style>
   </head>
