Removed parent id in template script I thought the id="parent' was required by the Bootstrap search box but i was wrong.

--- a/index.html
+++ b/index.html
@@ -233,9 +233,10 @@
     <script type="text/html" id="clockCards">
       <!-- box that the entire clock sits in -->
       <div class="mb-2 {{boardr}} {{bgcolor}}" style="width: 100%">
+        
         <div class="form-group row"> 
           <label for="{{searchBoxID}}" class="sr-only" >Type 3 characters and look for dropdown</label>
-          <div id="parent" class="col input-group" role="combobox"> <!-- form -->
+          <div id="" class="col input-group" role="combobox">
             <div class="input-group-prepend rounded">
               <div class=" input-group-text">
                 <i class="fas fa-search"></i>
