Remove some extraneous comments & {{pulseMe}} which I abandoned

--- a/index.html
+++ b/index.html
@@ -244,14 +244,13 @@
             </div>
             <div class="form-control p-0 pl-1 pt-1" id="{{searchBoxDivID}}" aria-expanded="false">
             </div>
-          </div> <!-- close form -->
+          </div> 
         </div>
-       
         
         <div style="color: red" class="rounded col" id="{{timeDescriptionID}}">{{timeDescription}}
         </div>
-        <div class="ml-5 mb-3 text-dark {{pulseMe}}" id="{{timeID}}"></div><!-- placeholder div for the actual time -->
-      </div> <!-- close div for card -->     
+        <div class="ml-5 mb-3 text-dark" id="{{timeID}}"></div> <!-- placeholder div for the actual time  -->
+      </div> 
     </script>
     <!-- END NEW PROBABLY WRONG STUFF -->
 
